# DumbFramework

./: .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.in  DumbFramework.filters  DumbFramework.props  DumbFramework.sln  DumbFramework.vcxproj  Makefile  README.md  index.html  params.json
cmake/: FindAntTweakBar.cmake  FindBOX2D.cmake  FindGLFW.cmake  FindGLM.cmake  FindUnitTest++.cmake  Findtinyxml2.cmake
doc/: entrypoint.puml
examples/wopr/: CMakeLists.txt  README  absolutekeycontroler.cpp  absolutekeycontroler.hpp  board.cpp  board.h  displayconfig.cpp  displayconfig.hpp  input.hpp  inputcontroler.cpp  inputcontroler.hpp  mousecontroler.cpp  mousecontroler.hpp  relativekeycontroler.cpp  relativekeycontroler.hpp  wopr.cpp
include/DumbFramework/: adviser.hpp  application.hpp  boundingbox.hpp  boundingcircle.hpp  boundingfrustum.hpp  boundingobjects.hpp  boundingquad.hpp  boundingsphere.hpp  bufferobject.hpp  bufferobject.inl  camera.hpp  config.hpp  containment.hpp  engine.hpp  entity.hpp  file.hpp  flat.hpp  font.hpp  frustum.hpp  geometry.hpp  geometry.inl  imguidelegate.hpp  imguidelegate.inl  indexbuffer.hpp  inputdelegate.hpp  joystick.hpp  line2d.hpp  log.hpp  log.inl  material.hpp  mesh.hpp  mesh.inl  module.hpp  mouse.hpp  mouse.inl  plane.hpp  program.hpp  rect.hpp  rect.inl  render.hpp  (+23 more)
include/DumbFramework/geometry/: boundingbox.hpp  boundingcircle.hpp  boundingobjects.hpp  boundingquad.hpp  boundingsphere.hpp  camera.hpp  containment.hpp  frustum.hpp  line2.hpp  line2d.hpp  plane.hpp  ray.hpp  ray.inl  rect.hpp  rect.inl  side.hpp  transform.hpp  transform2d.hpp  transform2d.inl
include/DumbFramework/logic/: searchtree.hpp
include/DumbFramework/platform/msvc/: config.hpp
include/DumbFramework/platform/unix/: config.hpp
include/DumbFramework/render/: bufferobject.hpp  bufferobject.inl  dummy.hpp  geometry.hpp  geometry.inl  geometrypass.hpp  indexbuffer.hpp  light.hpp  lightpass.hpp  material.hpp  mesh.hpp  mesh.inl  program.hpp  renderbuffer.hpp  rendercontext.hpp  rendercontext.inl  renderer.hpp  renderer.inl  shader.hpp  texture.hpp  texture.inl  texture2d.hpp  texturebuffer.hpp  textureloader.hpp  tileculling.hpp  uniformbuffer.hpp  vertexbuffer.hpp  vertexstream.hpp
include/DumbFramework/render/light/: directionallight.hpp  light.hpp  lightpass.hpp  pointlight.hpp  spotlight.hpp
resources/: materialTest.fs  std.fs  std.vs
resources/objects/occluders/: cube.ply  icosphere.ply  pyramid.ply
resources/shaders/: geometrybuffer.fs  geometrybuffer.vs  lightindexed.vs  pbr.inc  pointlight.fs  pointlight.vs  spotlight.fs  spotlight.vs  std.vs
src/: .application.cpp.swp  .sprengine.cpp.swp  adviser.cpp  application.cpp  application.hpp  boundingbox.cpp  boundingbox.hpp  boundingcircle.cpp  boundingcircle.hpp  boundingfrustum.cpp  boundingfrustum.hpp  boundingobjects.hpp  boundingquad.cpp  boundingquad.hpp  boundingsphere.cpp  boundingsphere.hpp  bufferobject.cpp  bufferobject.hpp  camera.cpp  config.hpp  container.hpp  containment.hpp  entity.cpp  enum.hpp  file.cpp  file.hpp  flat.cpp  font.cpp  frame.hpp  frustum.cpp  geometry.cpp  geometry.hpp  imguidelegate.cpp  joystick.cpp  line2d.cpp  line2d.hpp  log.cpp  log.hpp  material.cpp  material.hpp  (+39 more)
src/collision/: narrowphase.cpp  narrowphase.hpp  simplex.cpp  simplex.hpp
src/collision/test/: narrowphase.cpp  simplex.cpp
src/demo/: .simple.cpp.swp  breakout.cpp  cairo.cpp  flatengine.cpp  font.cpp  gears.cpp  gears.hpp  gui.cpp  mattest.cpp  simple.cpp  terrain.cpp  test.cpp  vbo.cpp
src/demo/font/: basic.cpp  menu.cpp
src/demo/merlin/: board.cpp  board.hpp  solver.cpp  solver.hpp
src/geometry/: boundingbox.cpp  boundingcircle.cpp  boundingquad.cpp  boundingsphere.cpp  camera.cpp  frustum.cpp  line2.cpp  line2d.cpp  plane.cpp  ray.cpp  rect.cpp  transform.cpp
src/platform/msvc/: config.hpp  file.cpp
src/platform/unix/: file.cpp
src/render/: bufferobject.cpp  dummy.cpp  geometry.cpp  geometrypass.cpp  light.cpp  lightpass.cpp  material.cpp  mesh.cpp  program.cpp  renderbuffer.cpp  rendercontext.cpp  renderer.cpp  shader.cpp  texture2d.cpp  textureloader.cpp  tileculling.cpp  uniformbuffer.cpp  vertexstream.cpp
src/render/light/: directionallight.cpp  light.cpp  lightpass.cpp  occluders.cpp  occluders.hpp  pointlight.cpp  spotlight.cpp
src/test/: boundingbox.cpp  boundingcircle.cpp  boundingfrustum.cpp  boundingsphere.cpp  entity.cpp  frustum.cpp  log.cpp  plane.cpp  polygon2d.cpp  runtests.cpp  transform.cpp
src/tools/atlasmaker/: main.cpp
tools/AtlasMaker/: .project  atlasmaker.product  plugin.xml
tools/AtlasMaker/src/net/dumbframework/tools/atlasmaker/: Activator.java
tools/AtlasMaker/src/net/dumbframework/tools/atlasmaker/internal/: Application.java  ApplicationActionBarAdvisor.java  ApplicationWorkbenchAdvisor.java  ApplicationWorkbenchWindowAdvisor.java  ImageViewer.java  Perspective.java
tools/atlasmaker/: .main.c.swo  .main.c.swp  main.c  main.cpp
tools/meshConvert/: meshConvert.py
tools/org.dumbframework.tools.atlasmaker/: .project  plugin.xml
tools/org.dumbframework.tools.atlasmaker/src/org/dumbframework/tools/atlasmaker/: Activator.java  AnimationMaker.java  Application.java  ApplicationActionBarAdvisor.java  ApplicationWorkbenchAdvisor.java  ApplicationWorkbenchWindowAdvisor.java  AtlasBuilder.java  AtlasRebuildAction.java  MainPerspective.java  SpriteView.java
tools/org.dumbframework.tools.atlasmaker/src/org/dumbframework/tools/atlasmaker/model/: Animation.java  Atlas.java  Sprite.java  SpriteManager.java
tools/snippet/: monitor.cpp
